<resources>
    <string name="app_name">MeFyDoctor</string>
    <string name="reg_text1">Lets Get Started!</string>
    <string name="reg_text2">Whats Your Name?</string>
    <string name="reg_text3">Email Id</string>
    <string name="reg_text4">Gender</string>
    <string name="gen_male">Male</string>
    <string name="gen_female">Female</string>
    <string name="gen_others">Others</string>
    <string name="reg_dob">D.O.B</string>
    <string name="reg_city">City</string>
    <string name="reg_lang">Language</string>
    <string name="reg_practice">Practising Since</string>
    <string name="reg_issue">Issueing Authority</string>
    <string name="reg_edu">Education</string>
    <string name="reg_spec">Speciality</string>
    <string name="reg_phn">Phone Number</string>
    <string name="reg_state">State</string>
    <string name="reg_id">Registration Id</string>
    <string name="reg_otp">OTP</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="dashfirstTv">You Have</string>
    <string name="clinic">clinic</string>
    <string name="manageclinic">Manage Clinic</string>
    <string name="dasheconsult">Manage eConsult</string>
    <string name="dashcredit">Your credit</string>
    <string name="dashbills">View Bills</string>
    <string name="dashpatient">Patient Queue</string>
    <string name="dashtoday">Today</string>
    <string name="dashviewpatient">View Patient</string>
    <string name="dashclinicadd">Add Clinic</string>
    <string name="dashclientname">Client Name</string>
    <string name="dashaddr">Address</string>
    <string name="dashcontact">Contact Number</string>
    <string name="dashfee">Fee</string>
    <string name="dashsche">Schedule</string>
    <string name="dashstart">Start date</string>
    <string name="dashto">To</string>
    <string name="dashend">End date</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="room_status">Status</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="calldisconnect">Call Disconnected</string>
    <string name="pipnotsupport">Picture in Picture feature not supported on this device.</string>
</resources>
